Fix running app instructions